// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaginationIcons on Web Next page icon renders out an svg and label 1`] = `
<View
  style={72}
>
  <Text
    style={74}
  >
    <PageLabel
      direction="Next"
    />
  </Text>
  <Svg
    height={12}
    viewBox="42 12 60 120"
    width={7}
  >
    <G
      fill="#006699"
    >
      <Path
        d="M45.8,132L42,128.2,74.8,72,42,15.8,45.8,12,102,72Z"
      />
    </G>
  </Svg>
</View>
`;

exports[`PaginationIcons on Web Previous page icon renders out an svg and label 1`] = `
<View
  style={73}
>
  <Svg
    height={12}
    viewBox="42 12 60 120"
    width={7}
  >
    <G
      fill="#006699"
    >
      <Path
        d="M98.2,12l3.8,3.8L69.2,72,102,128.2,98.2,132,42,72Z"
      />
    </G>
  </Svg>
  <Text
    style={75}
  >
    <PageLabel
      direction="Previous"
    />
  </Text>
</View>
`;
